# bazel-demo-golang

./: .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  hello.go
pkg/logs/: BUILD.bazel  logs.go  logs_test.go
service/greeter/: BUILD.bazel  greeter.go
service/health/: BUILD.bazel  health.go
