load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/nicovogelaar/bazel-demo-golang",
    external = "vendored",
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "hello_image",
    binary = ":hello",
)

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "github.com/nicovogelaar/bazel-demo-golang",
    visibility = ["//visibility:private"],
)
