load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["greeter.go"],
    importpath = "github.com/nicovogelaar/bazel-demo-golang/service/greeter",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/logs:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/examples/helloworld/helloworld:go_default_library",
    ],
)

go_binary(
    name = "greeter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
